Correct alignmt of prices in menu section

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,6 +1,5 @@
 #contact {
     padding: 50px;
-    background-color: white;
     display: grid;
     grid-template-columns: repeat(auto-fit, 450px);
     color: black;
